# static-site-gen

./: Makefile  pyproject.toml
public/majesty/: index.html
src/: content.py  main.py  markdown.py  test_markdown.py
src/nodes/: html_node.py  leaf_node.py  parent_node.py  test_html_node.py  test_leaf_node.py  test_parent_node.py  test_text_node.py  text_node.py
